<resources>
    <string name="app_name">ImageApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Movie List</string>
    <string name="nav_header_subtitle">laissewang@live.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="load_data_error">Loading data on ERROR!</string>
    <string name="load_data_done">No more data!</string>
    <string name="apikey">0b2bdeda43b5688921839c8ecb20399b</string>
    <string name="read_data_error">Get data failed, please try it again.</string>
    <string name="read_data_counted">Failed too many times, please try it later.</string>
    <string name="in_theaters">In Theaters</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="top">Top250</string>
    <string name="weekly">Weekly</string>
    <string name="new_movies">New Movies</string>
    <string name="us_box">US Box</string>
</resources>
