<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/in_theaters"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/in_theaters" />
        <item
            android:id="@+id/coming_soon"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/coming_soon" />
        <item
            android:id="@+id/top"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/top" />
        <item
            android:id="@+id/new_movies"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/new_movies" />
        <item
            android:id="@+id/us_box"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/us_box" />
        <item
            android:id="@+id/weekly"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/weekly" />

    </group>



</menu>
